[tool.poetry]
name = "pybattery"
version = "0.1.0"
description = "Script notificador de bateria para desktops I3WM e similares"
authors = ["abelsalim <abelsalim@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
plyer = "^2.1.0"
psutil = "^5.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
